--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,27 @@ header{
 }
 header a{
   color: white;
-  font-weight: bolder;
+  font-weight: bold;
+  font-size: xx-large;
   text-decoration: none;
+}
+main{
+  padding: 1rem;
+}
+.products{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.product-info{
+  padding: 1rem;
+  font-weight: bold;
+}
+.product{
+  border: 1px #404040 solid;
+  margin: 1rem;
+}
+.product img{
+  width: 100%;
+  max-width: 300px;
 }
