Front-End-React-App

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,19 +6,26 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.site-container {
+  min-height: 100vh;
+}
 header{
-  background-color: #0081B4;
-  padding: 28px;
+  background-color: #2874f0;
+  padding: 8px;
 }
-header a{
+.Topic{
   color: white;
-  font-weight: bold;
-  font-size: xx-large;
-  text-decoration: none;
+  font-size: x-large;
+  font-weight: bolder;
+  
 }
+
 main{
-  padding: 1rem;
+  flex:1;
+}
+.btn-primary{
+  background-color:#f0c040;
+  color: #000000;
 }
 .products{
   display: flex;
@@ -27,7 +34,7 @@ main{
 }
 .product-info{
   padding: 1rem;
-  font-weight: bold;
+
 }
 .product{
   border: 1px #404040 solid;
@@ -35,5 +42,17 @@ main{
 }
 .product img{
   width: 100%;
-  max-width: 300px;
+  max-width: 400px;
+}
+.rating span{
+  color:#ffc000;
+}
+.img-large {
+  max-width: 100%;
+}
+.img-thumbnail {
+  height: 80px;
+}
+.small-container {
+  max-width: 600px;
 }
